# security_certificate_framework

./: AGENTS.md  BUILD.gn  CLAUDE.md  OAT.xml  README-en.md  README.en.md  README.md  bundle.json  cf.gni
frameworks/adapter/: BUILD.gn
frameworks/adapter/attestation/: BUILD.gn
frameworks/adapter/attestation/inc/: attestation_cert_verify.h
frameworks/adapter/attestation/src/: attestation_cert_ext.c  attestation_cert_ext_legacy.c  attestation_cert_ext_legacy.h  attestation_cert_verify.c  attestation_common.c  attestation_common.h
frameworks/adapter/v1.0/: BUILD.gn
frameworks/adapter/v1.0/inc/: certificate_openssl_class.h  certificate_openssl_common.h  x509_cert_chain_openssl.h  x509_cert_chain_openssl_ex.h  x509_cert_chain_validator_openssl.h  x509_cert_cms_generator_openssl.h  x509_certificate_create.h  x509_certificate_openssl.h  x509_crl_entry_openssl.h  x509_crl_openssl.h  x509_csr_openssl.h  x509_distinguished_name_openssl.h
frameworks/adapter/v1.0/src/: certificate_openssl_common.c  x509_cert_chain_openssl.c  x509_cert_chain_openssl_ex.c  x509_cert_chain_validator_openssl.c  x509_cert_cms_generator_openssl.c  x509_certificate_create.c  x509_certificate_openssl.c  x509_crl_entry_openssl.c  x509_crl_openssl.c  x509_csr_openssl.c  x509_distinguished_name_openssl.c
frameworks/adapter/v2.0/: BUILD.gn
frameworks/adapter/v2.0/inc/: cf_adapter_cert_openssl.h  cf_adapter_extension_openssl.h
frameworks/adapter/v2.0/src/: cf_adapter_ability.c  cf_adapter_cert_openssl.c  cf_adapter_extension_openssl.c
frameworks/cj/: BUILD.gn
frameworks/cj/inc/: cj_cert_common.h  cj_x509_certchain.h  cj_x509_certificate.h
frameworks/cj/src/: cj_cert_common.cpp  cj_cert_crl_collection.cpp  cj_certchain_validator.cpp  cj_cf_object.cpp  cj_x500_distinguished_name.cpp  cj_x509_certchain.cpp  cj_x509_certificate.cpp  cj_x509_crl.cpp
frameworks/common/: BUILD.gn  common.gni
frameworks/common/v1.0/inc/: cf_check.h  cf_err_msg.h  cf_log.h  cf_magic.h  cf_memory.h  config.h  fwk_class.h  utils.h
frameworks/common/v1.0/src/: cf_blob.c  cf_check.c  cf_err_msg.c  cf_log.c  cf_memory.c  cf_object_base.c  utils.c
frameworks/core/: BUILD.gn  adapter.map
frameworks/core/attestation/: BUILD.gn
frameworks/core/attestation/src/: hm_attestation_cert_verify.c
frameworks/core/cert/: BUILD.gn
frameworks/core/cert/inc/: cf_cert_adapter_ability_define.h  cf_object_cert.h
frameworks/core/cert/src/: cf_cert_ability.c  cf_object_cert.c
frameworks/core/extension/: BUILD.gn
frameworks/core/extension/inc/: cf_extension_adapter_ability_define.h  cf_object_extension.h
frameworks/core/extension/src/: cf_extension_ability.c  cf_object_extension.c
frameworks/core/life/: cf_api.c
frameworks/core/life/inc/: cf_object_ability_define.h
frameworks/core/param/: BUILD.gn
frameworks/core/param/inc/: cf_param_parse.h
frameworks/core/param/src/: cf_param.c  cf_param_parse.c
frameworks/core/v1.0/: BUILD.gn
frameworks/core/v1.0/certificate/: cert_chain_validator.c  cert_cms_generator.c  cert_crl_collection.c  cert_crl_common.c  x509_cert_chain.c  x509_certificate.c  x509_crl.c  x509_distinguished_name.c
frameworks/core/v1.0/inc/: cert_crl_common.h
frameworks/core/v1.0/spi/: cert_chain_validator_spi.h  cert_cms_generator_spi.h  x509_cert_chain_spi.h  x509_certificate_spi.h  x509_crl_spi.h  x509_distinguished_name_spi.h
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/dts/: cert.d.ts
frameworks/js/ani/idl/: ohos.security.cert.cert.taihe
frameworks/js/ani/inc/: ani_cert_chain_build_result.h  ani_cert_chain_validator.h  ani_cert_cms_generator.h  ani_cert_crl_collection.h  ani_cert_extension.h  ani_common.h  ani_object.h  ani_parameters.h  ani_pub_key.h  ani_x500_distinguished_name.h  ani_x509_cert.h  ani_x509_cert_chain.h  ani_x509_cert_chain_validate_result.h  ani_x509_crl.h  ani_x509_crl_entry.h
frameworks/js/ani/src/: ani_cert_chain_build_result.cpp  ani_cert_chain_validator.cpp  ani_cert_cms_generator.cpp  ani_cert_crl_collection.cpp  ani_cert_extension.cpp  ani_common.cpp  ani_constructor.cpp  ani_object.cpp  ani_parameters.cpp  ani_pub_key.cpp  ani_x500_distinguished_name.cpp  ani_x509_cert.cpp  ani_x509_cert_chain.cpp  ani_x509_cert_chain_validate_result.cpp  ani_x509_crl.cpp  ani_x509_crl_entry.cpp
frameworks/js/ani/test/: arktsconfig.json  build_test.sh  test_cert_chain_validator.ets  test_cert_cms_generator.ets  test_cert_crl_collection.ets  test_cert_extension.ets  test_main.ets  test_x500_distinguished_name.ets  test_x509_cert.ets  test_x509_cert_chain.ets  test_x509_crl.ets  test_x509_crl_entry.ets
frameworks/js/napi/certificate/: BUILD.gn
test/unittest/v1.0/: BUILD.gn
test/unittest/v1.0/include/: cf_mock.h  crypto_x509_cert_chain_data_der.h  crypto_x509_cert_chain_data_p7b.h  crypto_x509_cert_chain_data_pem.h  crypto_x509_cert_chain_data_pem_added.h  crypto_x509_cert_chain_data_pem_ex.h  crypto_x509_cert_chain_data_pem_part2.h  crypto_x509_test_common.h  memory_mock.h
test/unittest/v1.0/src/: attestation_cert_test.cpp  cf_api_metrics_test.cpp  cf_mock.cpp  crypto_x509_cert_chain_test.cpp  crypto_x509_cert_chain_test_ex.cpp  crypto_x509_cert_chain_test_part2.cpp  crypto_x509_cert_chain_test_part3.cpp  crypto_x509_cert_chain_validator_test.cpp  crypto_x509_cert_cms_generator_test.cpp  crypto_x509_cert_cms_generator_test_part2.cpp  crypto_x509_cert_cms_parser_test_mock.cpp  crypto_x509_cert_crl_collection_test.cpp  crypto_x509_cert_validator_basic_tests.cpp  crypto_x509_cert_validator_basic_tests2.cpp  crypto_x509_cert_validator_branch_coverage_tests.cpp  crypto_x509_cert_validator_crl_ocsp_tests.cpp  crypto_x509_cert_validator_mock_and_revocation_tests.cpp  crypto_x509_cert_validator_mock_failure_tests.cpp  crypto_x509_cert_validator_params_and_download_tests.cpp  crypto_x509_cert_validator_test.cpp  crypto_x509_cert_validator_test_common.cpp  crypto_x509_cert_validator_test_common.h  crypto_x509_cert_validator_test_data.cpp  crypto_x509_cert_validator_test_data.h  crypto_x509_certificate_test.cpp  crypto_x509_certificate_test_part2.cpp  crypto_x509_crl_test.cpp  (+7 more)
(+201 files in other folders)
