# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libcertificate_framework_adapter_config") {
  include_dirs = [
    "v1.0/inc"
  ]
}

ohos_static_library("libcertificate_framework_adapter") {
  subsystem_name = "security"
  part_name = "certificate_framework"
  public_configs = [ ":libcertificate_framework_adapter_config" ]

  deps = [
    "v1.0:certificate_openssl_plugin_lib"
  ]
  external_deps = [ "c_utils:utils" ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}
