# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("cj_cert_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  subsystem_name = "security"
  part_name = "certificate_framework"
  configs = [ "../../config/build:coverage_flag_cc" ]

  include_dirs = [
    "inc",
    "../common/v1.0/inc",
  ]

  cflags = [
    "-DHILOG_ENABLE",
    "-fPIC",
    "-g3",
  ]

  sources = [
    "src/cj_cert_common.cpp",
    "src/cj_cert_crl_collection.cpp",
    "src/cj_certchain_validator.cpp",
    "src/cj_cf_object.cpp",
    "src/cj_x500_distinguished_name.cpp",
    "src/cj_x509_certchain.cpp",
    "src/cj_x509_certificate.cpp",
    "src/cj_x509_crl.cpp",
    "src/cj_x509_crl_entry.cpp",
  ]

  deps = [ "../core:certificate_framework_core" ]
}
