# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("certificate_openssl_plugin_lib") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  subsystem_name = "security"
  part_name = "certificate_framework"
  configs = [ "../../../config/build:coverage_flag" ]

  include_dirs = [
    "inc",
    "../../core/v1.0/spi",
  ]

  sources = [
    "src/certificate_openssl_common.c",
    "src/x509_cert_chain_openssl.c",
    "src/x509_cert_chain_openssl_ex.c",
    "src/x509_cert_chain_validator_openssl.c",
    "src/x509_certificate_openssl.c",
    "src/x509_crl_entry_openssl.c",
    "src/x509_crl_openssl.c",
    "src/x509_distinguished_name_openssl.c",
  ]

  cflags = [
    "-DHILOG_ENABLE",
    "-fPIC",
    "-Wall",
  ]

  deps = [ "../../common:libcertificate_framework_common_static" ]

  external_deps = [
    "c_utils:utils",
    "crypto_framework:crypto_framework_lib",
    "hilog:libhilog",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
  ]
}
