# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("cert") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  subsystem_name = "security"
  part_name = "certificate_framework"
  configs = [ "../../../../config/build:coverage_flag_cc" ]
  relative_install_dir = "module/security"
  include_dirs = [
    "inc",
    "../../../common/v1.0/inc",
  ]

  cflags = [
    "-DHILOG_ENABLE",
    "-fPIC",
    "-g3",
  ]

  sources = [
    "src/napi_cert_chain_validator.cpp",
    "src/napi_cert_crl_collection.cpp",
    "src/napi_cert_crl_common.cpp",
    "src/napi_cert_extension.cpp",
    "src/napi_cert_utils.cpp",
    "src/napi_certificate_init.cpp",
    "src/napi_common.cpp",
    "src/napi_key.cpp",
    "src/napi_object.cpp",
    "src/napi_pub_key.cpp",
    "src/napi_x509_cert_chain.cpp",
    "src/napi_x509_cert_chain_validate_params.cpp",
    "src/napi_x509_cert_chain_validate_result.cpp",
    "src/napi_x509_cert_match_parameters.cpp",
    "src/napi_x509_certificate.cpp",
    "src/napi_x509_crl.cpp",
    "src/napi_x509_crl_entry.cpp",
    "src/napi_x509_crl_match_parameters.cpp",
    "src/napi_x509_distinguished_name.cpp",
    "src/napi_x509_trust_anchor.cpp",
  ]

  deps = [ "../../../core:certificate_framework_core" ]

  external_deps = [
    "c_utils:utils",
    "crypto_framework:crypto_framework_lib",
    "hilog:libhilog",
    "napi:ace_napi",
  ]
}
